use rpms already generated to install hirte components
Resolve Issue #158
This commit, download artifacts once build workflow complete

It copies the relevant rpm to /tmp/rpms and install it
Renaming .github/workflows/e2e.yaml -> .github/workflows/e2e.yml
Adding podman network create with manager specific net ip
Test is working with systemd hirte units

Signed-off-by: Yariv Rachmani <yrachman@redhat.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,3 +109,7 @@ jobs:
         with:
           name: rpm-artifacts
           path: ${{ env.ARTIFACTS_DIR}}
+
+  e2e:
+    needs: rpmbuild
+    uses: ./.github/workflows/e2e.yml
