--- a/tests/Containerfile
+++ b/tests/Containerfile
@@ -1,11 +1,9 @@
 FROM registry.gitlab.com/centos/automotive/sample-images/hirte/hirte-builder:1.0.0
-COPY ./builddir/bin/usr/local/bin/* /usr/local/bin
-
-CMD mkdir -p /usr/local/share/dbus-1/interfaces/
-COPY ./builddir/bin/usr/local/share/dbus-1/interfaces/* \
-     /usr/local/share/dbus-1/interfaces/
-COPY ./doc/example-hirte*.ini /hirte/
-
+RUN mkdir -p /tmp/rpms
+COPY ./exported-artifacts/ /tmp/rpms/
+RUN dnf install -y --repo local-hirte-snapshot \
+    --repofrompath local-hirte-snapshot,file:///tmp/rpms \
+    --nogpgcheck hirte hirte-agent
 CMD [ "/sbin/init" ]
 
 WORKDIR /hirte
